--- a/index.html
+++ b/index.html
@@ -1598,11 +1598,21 @@ div.tocify {
 <section id="tentative-outline" class="level2">
 <h2>Tentative Outline</h2>
 <ul>
-<li>Week 1: Chapter 1</li>
-<li>Week 2: Chapter 2</li>
-<li>Week 3: Chapter 2</li>
-<li>Week 4: Chapter 2</li>
-<li>Week 5: Chapter 2</li>
+<li>1/15: Chapter 1 &amp; 2</li>
+<li>1/22: Chapter 3 and 4</li>
+<li>1/29: Chapter 5</li>
+<li>2/5: Chapter 6</li>
+<li>2/12: (exam review)</li>
+<li>2/19: {} &amp; Chapter 7</li>
+<li>2/26: Chapter 8</li>
+<li>3/12: Chapter 9</li>
+<li>3/19: Chapter 10 and 11</li>
+<li>3/26: (exam review)</li>
+<li>4/2: {} &amp; Chapter 12</li>
+<li>4/9: Chapter 13 and 14</li>
+<li>4/16: Chapter 15</li>
+<li>4/23: exam review</li>
+<li>4/30: Finals Week</li>
 </ul>
 </section>
 </section>
