--- a/index.html
+++ b/index.html
@@ -791,6 +791,15 @@ img {
 <p>CLO 4. Leadership and Communication: Be capable of expressing key financial concepts and terms commonly used in the field; by using effective written, oral and interpersonal communications to contribute to the financial performance of domestic firms, global organizations and other international relationships.</p>
 </section>
 </section>
+<section id="exams" class="level2">
+<h2>Exams</h2>
+<p>There will be three exams (two during the semester and a final). The exams will be multiple choice.</p>
+</section>
+<section id="project" class="level2">
+<h2>Project</h2>
+<p>In groups, students will value a tolling agreement on a natural gas fired power plant via discounted cash flows. This project will make heavy use of core concepts learned in this course—namely the calculation of cash flows and the time-value-of-money.</p>
+<p>In addition, students will gain experience handling data, and making reasonable assumptions necessary in real-world analyses.</p>
+</section>
 <section id="grading" class="level2">
 <h2>Grading</h2>
 <center>
@@ -804,21 +813,25 @@ img {
 <tbody>
 <tr class="odd">
 <td>Exam 1</td>
-<td>25</td>
+<td>20</td>
 </tr>
 <tr class="even">
 <td>Exam 2</td>
-<td>25</td>
+<td>20</td>
 </tr>
 <tr class="odd">
 <td>Final Exam</td>
-<td>35</td>
+<td>30</td>
 </tr>
 <tr class="even">
-<td>Homework/Pop Quizzes/Other Participation</td>
+<td>Project</td>
 <td>15</td>
 </tr>
 <tr class="odd">
+<td>Homework/Pop Quizzes/Other Participation</td>
+<td>15</td>
+</tr>
+<tr class="even">
 <td>Total Points</td>
 <td>100</td>
 </tr>
@@ -893,6 +906,8 @@ img {
         <ul>
         <li><a href="#syllabus-fin-302-financial-management-principles">Syllabus (FIN 302) Financial Management Principles</a><ul>
         <li><a href="#description">Description</a></li>
+        <li><a href="#exams">Exams</a></li>
+        <li><a href="#project">Project</a></li>
         <li><a href="#grading">Grading</a></li>
         <li><a href="#guidelines-and-accommodations">Guidelines and Accommodations</a></li>
         <li><a href="#tentative-outline">Tentative Outline</a></li>
