--- a/index.html
+++ b/index.html
@@ -760,12 +760,12 @@ img {
 <b>SCHOOL OF BUSINESS ADMINISTRATION</b>
 </center>
 <p><br> <br> <strong>Instructor</strong>: Matthew Brigida, Ph.D.</p>
-<p><strong>Office</strong>: Donovan 1127?</p>
-<p><strong>Office Hours</strong>: Tuesday 4:00–5:00 and Monday/Wednesday 10:30–12:00</p>
+<p><strong>Office</strong>: Donovan 1277</p>
+<p><strong>Office Hours</strong>: Tuesday 5:00–6:00 and Monday/Wednesday 10:30–12:00</p>
 <p><strong>Email</strong>: <a href="mailto:matthew.brigida@sunyit.edu">matthew.brigida@sunyit.edu</a></p>
 <!-- **Course Start Date**:  -->
 <!-- **Course End Date**:  -->
-<p><strong>Class Location</strong>: DONOVN 1146</p>
+<p><strong>Class Location</strong>: Donovan G144</p>
 <p><strong>Class Day/Time</strong>: Tuesday, 6:00—9:30pm</p>
 <p><strong>Text</strong>: <a href="https://www.amazon.com/dp/0073382469/ref=olp_product_details?_encoding=UTF8&amp;me=">Essentials of Corporate Finance, 7th ed, ISBN: 978-0073382463</a> <a href="https://www.amazon.com/gp/offer-listing/0073382469/ref=dp_olp_used?ie=UTF8&amp;condition=used">Used Copies usually starting from about $4</a>. You also may use other editions of the text.</p>
 <p><strong>Supplementary Materials</strong>: <a href="https://www.5minutefinance.org/">5-Minute Finance</a>. There may be additional topics in the <a href="https://github.com/FinancialMarkets/5MinuteFinance">Fundamentals and Corporate Finance Sections here.</a></p>
