updated outline and info

--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@ img {
 
 
 <div id="content">
-<section id="syllabus-fin-302-financial-management-principles" class="level1">
+<div id="syllabus-fin-302-financial-management-principles" class="section level1">
 <h1>Syllabus (FIN 302) Financial Management Principles</h1>
 <br> <br>
 <center>
@@ -761,21 +761,21 @@ img {
 </center>
 <p><br> <br> <strong>Instructor</strong>: Matthew Brigida, Ph.D.</p>
 <p><strong>Office</strong>: Donovan 1277</p>
-<p><strong>Office Hours</strong>: Tuesday 5:00–6:00 and Monday/Wednesday 10:30–12:00</p>
+<p><strong>Office Hours</strong>: Tuesday/Thursday/Friday 10:30–11:30</p>
 <p><strong>Email</strong>: <a href="mailto:matthew.brigida@sunyit.edu">matthew.brigida@sunyit.edu</a></p>
 <!-- **Course Start Date**:  -->
 <!-- **Course End Date**:  -->
-<p><strong>Class Location</strong>: Donovan G144</p>
-<p><strong>Class Day/Time</strong>: Tuesday, 6:00—9:30pm</p>
+<p><strong>Class Location</strong>: Donovan 1157</p>
+<p><strong>Class Day/Time</strong>: MWF, 9:20—10:30pm</p>
 <p><strong>Text</strong>: <a href="https://www.amazon.com/dp/0073382469/ref=olp_product_details?_encoding=UTF8&amp;me=">Essentials of Corporate Finance, 7th ed, ISBN: 978-0073382463</a> <a href="https://www.amazon.com/gp/offer-listing/0073382469/ref=dp_olp_used?ie=UTF8&amp;condition=used">Used Copies usually starting from about $4</a>. You also may use other editions of the text.</p>
 <p><strong>Supplementary Materials</strong>: <a href="https://www.5minutefinance.org/">5-Minute Finance</a>. There may be additional topics in the <a href="https://github.com/FinancialMarkets/5MinuteFinance">Fundamentals and Corporate Finance Sections here.</a></p>
 <!-- **Important Dates** -->
 <!-- **Midterm Exam:**   -->
 <!-- **Final Exam:**   -->
-<section id="description" class="level2">
+<div id="description" class="section level2">
 <h2>Description</h2>
 <p><strong>Course Catalog Description</strong>: General principles of corporate/managerial finance are presented. Topics include the tax environment, an overview of financial planning and control, working capital management, long term financing, time value of money, capital budgeting, cost of capital, dividend policy, agency theory, and international financial issues. Responsibilities and functions performed by financial analysts, financial managers, and chief financial managers are discussed. (Pre-requisite: ACC 201 or equivalent.)</p>
-<section id="overview" class="level3">
+<div id="overview" class="section level3">
 <h3>Overview</h3>
 <ul>
 <li><p>This course will present the fundamentals of managerial finance as a vital part of the complete business ecosystem. Importance is placed on becoming familiar with the rudimentary tools and techniques that act as the basis for all further study and function of finance.</p></li>
@@ -783,25 +783,25 @@ img {
 <li><p>Attention to current events and linkage between financial markets and corporate decision-making and vis-a-vis is discussed.</p></li>
 <li><p>Introduction to the role of the change agent and changing technology in financial analysis and financial decision-making processes.</p></li>
 </ul>
-</section>
-<section id="course-learning-outcomes-objectives" class="level3">
+</div>
+<div id="course-learning-outcomes-objectives" class="section level3">
 <h3>Course Learning Outcomes &amp; Objectives</h3>
 <p>CLO 1. Technical Competence: Adept in applying technology to solve institutional problems and enable effective financial decision making.</p>
 <p>CLO 2. Analytical Problem Framing: Demonstrate individual capacity to evaluate and deploy analytical methods selected from a diverse portfolio of tools analyze and manage common financial decisions.</p>
 <p>CLO 3. Strategic and Integrative Thinking: Understand the baseline resources available for analyzing and managing a firm’s financial performance. Including collecting data, processing information and evaluating and communicating outcomes with partners; differentiate between the accounting function as a preparer of data and information and the finance function as a user of information for decision making and the role of ethics in the process.</p>
 <p>CLO 4. Leadership and Communication: Be capable of expressing key financial concepts and terms commonly used in the field; by using effective written, oral and interpersonal communications to contribute to the financial performance of domestic firms, global organizations and other international relationships.</p>
-</section>
-</section>
-<section id="exams" class="level2">
+</div>
+</div>
+<div id="exams" class="section level2">
 <h2>Exams</h2>
 <p>There will be three exams (two during the semester and a final). The exams will be multiple choice.</p>
-</section>
-<section id="project" class="level2">
+</div>
+<div id="project" class="section level2">
 <h2>Project</h2>
 <p>In groups, students will value a tolling agreement on a natural gas fired power plant via discounted cash flows. This project will make heavy use of core concepts learned in this course—namely the calculation of cash flows and the time-value-of-money.</p>
 <p>In addition, students will gain experience handling data, and making reasonable assumptions necessary in real-world analyses.</p>
-</section>
-<section id="grading" class="level2">
+</div>
+<div id="grading" class="section level2">
 <h2>Grading</h2>
 <center>
 <table>
@@ -852,19 +852,19 @@ img {
 <blockquote>
 <p>+/- grades may be assigned at the instructors discretion.</p>
 </blockquote>
-</section>
-<section id="guidelines-and-accommodations" class="level2">
+</div>
+<div id="guidelines-and-accommodations" class="section level2">
 <h2>Guidelines and Accommodations</h2>
 <p>Academic Integrity Policy Students Enrolled in this course are required to understand and fully comply with all aspects of the Academic Integrity Policy as described in the SUNY Polytechnic Institute Handbook (available at: <a href="https://sunypoly.edu/pdf/student_handbook.pdf" class="uri">https://sunypoly.edu/pdf/student_handbook.pdf</a> )</p>
-<section id="accommodations-for-students-with-disabilities" class="level3">
+<div id="accommodations-for-students-with-disabilities" class="section level3">
 <h3>Accommodations for Students with Disabilities</h3>
 <p>Students with disabilities are welcome at SUNY Polytechnic Institute. The Disabilities Services Office is located in the Career Services Suite, B101, Kunsela Hall Hours: Monday through Friday 8:30 a.m. – 4:30 p.m. or by appointment. E-mail: <a href="mailto:suzanne.sprague@sunyit.edu">suzanne.sprague@sunyit.edu</a> Phone: (315) 792-7170</p>
 <p>Any current or prospective student may contact our office to discuss potential academic accommodations. Typical accommodations include extended time for testing, testing in a quiet location, textbooks in alternate format, and others as determined by the nature of the disability. These accommodations must be supported by documentation from outside sources, such as a recent psychological evaluation or medical report that clearly identifies the nature of your disability and the impact of your disability or treatment upon learning. (SUNY Poly is not responsible for providing evaluation or funding to complete the needed documentation.)</p>
 <p>The Disabilities Services Office will assist with requesting the required documentation or exploring resources that may provide testing or documentation. Once documentation is received, the Disability Counselor meets with the student to discuss the information based on his or her experiences and perspective. A student’s explanation of how his or her disability affects learning and what accommodations are needed is extremely important. Once a determination is made regarding the reasonable and appropriate accommodations, a plan is written which students sign and share with instructors. This plan does not disclose the nature of the disability, although many students have found that discussing their circumstances with faculty can be helpful.</p>
 <p>Accommodations are implemented to ensure compliance with the Americans with Disabilities Act of 1990 (ADA) and Section 504 (subsection E) of the Rehabilitation Act. The intent of which is to provide access for otherwise qualified persons. SUNY Poly is not required to lower or substantially modify essential academic requirements, or make modifications that would fundamentally alter the nature of a service, program, or activity or that would result in an undue financial or administrative burden. Additionally, accommodation plans must be updated each semester.</p>
 <p>The Disabilities Services Office is happy to advocate or coordinate with outside service providers, by student request and with written consent to communicate. Parents should be aware that legal rights and responsibilities change from high school to the college, both in terms of the type of support provided and in terms of parental involvement in the process. Students are solely responsible for self-identifying and following up with our office for any needs that they may have. Any student who wishes to have our office communicate with a parent must sign a written consent for permission to communicate.</p>
-</section>
-<section id="course-syllabus-disclosure-statement-spring-2018" class="level3">
+</div>
+<div id="course-syllabus-disclosure-statement-spring-2018" class="section level3">
 <h3>Course Syllabus Disclosure Statement Spring 2018</h3>
 <p>Accommodations for Students with Disabilities registered at SUNY Polytechnic Institute</p>
 <blockquote>
@@ -874,29 +874,44 @@ img {
 <!-- -  **Understanding vs Computation**: This course will focus on understanding financial concepts over merely calculating a number. Any calculation you will see as an undergrad has already been implemented in 20+ different programming languages.  You will never get a job as a calculator.  The value of the financial analyst is in undertanding what a calculation does, what the output means, etc.  You must be able to use the appropriate calculation in a given situation, and able to understand its output to make financial decisions. -->
 <!-- -  **Spreadsheet Skills**:  The above does not mean you do not need to know how to calculate financial values.  You need to be able to do so in a spreadsheet, and increasingly with some programming language (python, javascript, R, etc). The point here is that the correct calculation is the minimal amount of work you can do.  It is the easiest part.  The harder, and more important aspect, is understanding what you are doing.  -->
 <!-- -  Accordingly many *computation* questions on the exams can be solved through logic---knowing that 3 of 4 potential answers are not possible. -->
-</section>
-</section>
-<section id="tentative-outline" class="level2">
+</div>
+</div>
+<div id="tentative-outline" class="section level2">
 <h2>Tentative Outline</h2>
+<!-- - 1/15: Chapter 1 & 2
+- 1/22:  Chapter 3 and 4
+- 1/29: Chapter  5
+- 2/5: Chapter 6
+- 2/12: <span style="color:green">*Exam Review*</span>
+- 2/19: <span style="color:red">**Exam 1**</span> & Chapter 7
+- 2/26: Chapter 8
+- 3/12: Chapter 9
+- 3/19: Chapter 10 and 11
+- 3/26:  <span style="color:green">*Exam Review*</span>
+- 4/2: <span style="color:red">**Exam 2**</span> & Chapter 12
+- 4/9: Chapter 13 and 14
+- 4/16: Chapter 15
+- 4/23: exam review
+- 4/30: Finals Week -->
 <ul>
-<li>1/15: Chapter 1 &amp; 2</li>
-<li>1/22: Chapter 3 and 4</li>
-<li>1/29: Chapter 5</li>
-<li>2/5: Chapter 6</li>
-<li>2/12: <span style="color:green"><em>Exam Review</em></span></li>
-<li>2/19: <span style="color:red"><strong>Exam 1</strong></span> &amp; Chapter 7</li>
-<li>2/26: Chapter 8</li>
-<li>3/12: Chapter 9</li>
-<li>3/19: Chapter 10 and 11</li>
-<li>3/26: <span style="color:green"><em>Exam Review</em></span></li>
-<li>4/2: <span style="color:red"><strong>Exam 2</strong></span> &amp; Chapter 12</li>
-<li>4/9: Chapter 13 and 14</li>
-<li>4/16: Chapter 15</li>
-<li>4/23: exam review</li>
-<li>4/30: Finals Week</li>
+<li>8/27: Chapter 1 &amp; 2</li>
+<li>9/3: Chapter 3 and 4</li>
+<li>9/10: Chapter 5</li>
+<li>9/17: Chapter 6</li>
+<li>9/24: <span style="color:green"><em>Exam Review</em></span></li>
+<li>10/1: <span style="color:red"><strong>Exam 1</strong></span> &amp; Chapter 7</li>
+<li>10/8: Chapter 8</li>
+<li>10/15: Chapter 9</li>
+<li>10/22: Chapter 10 and 11</li>
+<li>10/29: <span style="color:green"><em>Exam Review</em></span></li>
+<li>11/5: <span style="color:red"><strong>Exam 2</strong></span> &amp; Chapter 12</li>
+<li>11/12: Chapter 13 and 14</li>
+<li>11/19: Chapter 15</li>
+<li>11/26: exam review</li>
+<li>12/3: exam review</li>
 </ul>
-</section>
-</section>
+</div>
+</div>
 </div>
 
 
