--- a/index.html
+++ b/index.html
@@ -564,11 +564,6 @@ text-align: center;
 font-style: italic;
 font-size: 90%;
 }
-img.mfp-img {
-background-color: #FFFFFF;
-padding: 0px;
-margin: 40px auto;
-}
 .mfp-figure {
 min-width: 250px;
 }
@@ -761,12 +756,12 @@ img {
 </center>
 <p><br> <br> <strong>Instructor</strong>: Matthew Brigida, Ph.D.</p>
 <p><strong>Office</strong>: Donovan 1277</p>
-<p><strong>Office Hours</strong>: Tuesday 4:00–6:00 and Monday/Wednesday 11:00–12:00</p>
+<p><strong>Office Hours</strong>: Tuesday and Wednesday 4:30–6:00</p>
 <p><strong>Email</strong>: <a href="mailto:matthew.brigida@sunyit.edu" class="email">matthew.brigida@sunyit.edu</a></p>
 <!-- **Course Start Date**:  -->
 <!-- **Course End Date**:  -->
 <p><strong>Class Location</strong>: Donovan 1146</p>
-<p><strong>Class Day/Time</strong>: Tuesday, 6:00–9:30pm</p>
+<p><strong>Class Day/Time</strong>: Wednesday, 6:00–9:30pm</p>
 <p><strong>Text</strong>: <a href="https://www.amazon.com/dp/0073382469/ref=olp_product_details?_encoding=UTF8&amp;me=">Essentials of Corporate Finance, 7th ed, ISBN: 978-0073382463</a> <a href="https://www.amazon.com/gp/offer-listing/0073382469/ref=dp_olp_used?ie=UTF8&amp;condition=used">Used Copies usually starting from about $4</a>. You also may use other editions of the text.</p>
 <p><strong>Supplementary Materials</strong>: <a href="https://www.5minutefinance.org/">5-Minute Finance</a>. There may be additional topics in the <a href="https://github.com/FinancialMarkets/5MinuteFinance">Fundamentals and Corporate Finance Sections here.</a></p>
 <!-- **Important Dates** -->
@@ -894,39 +889,23 @@ img {
 </div>
 <div id="tentative-outline-by-week" class="section level2">
 <h2>Tentative Outline by Week</h2>
-<ul>
-<li>1/22: Chapter 1 &amp; 2</li>
-<li>1/28: Chapter 3 and 4</li>
-<li>2/4: Chapter 5</li>
-<li>2/11: Chapter 6</li>
-<li>2/18: <span style="color:green"><em>Exam Review</em></span></li>
-<li>2/25: <span style="color:red"><strong>Exam 1</strong></span> &amp; Chapter 7</li>
-<li>3/4: Chapter 8</li>
-<li>3/11: Spring Break</li>
-<li>3/18: Chapter 9</li>
-<li>3/25: Chapter 10 and 11</li>
-<li>4/1: <span style="color:green"><em>Exam Review</em></span></li>
-<li>4/8: <span style="color:red"><strong>Exam 2</strong></span> &amp; Chapter 12</li>
-<li>4/15: Chapter 13 and 14</li>
-<li>4/22: Chapter 15</li>
-<li>4/29: exam review</li>
-<li>5/6: Finals Week</li>
-</ul>
-<!-- - 8/27: Chapter 1 & 2 -->
-<!-- - 9/3:  Chapter 3 and 4 -->
-<!-- - 9/10: Chapter  5 -->
-<!-- - 9/17: Chapter 6 -->
-<!-- - 9/24: <span style="color:green">*Exam Review*</span> -->
-<!-- - 10/1: <span style="color:red">**Exam 1**</span> & Chapter 7 -->
-<!-- - 10/8: Chapter 8 -->
-<!-- - 10/15: Chapter 9 -->
-<!-- - 10/22: Chapter 10 and 11 -->
-<!-- - 10/29:  <span style="color:green">*Exam Review*</span> -->
-<!-- - 11/5: <span style="color:red">**Exam 2**</span> & Chapter 12 -->
-<!-- - 11/12: Chapter 13 and 14 -->
-<!-- - 11/19: Chapter 15 -->
-<!-- - 11/26: exam review -->
-<!-- - 12/3: exam review -->
+<!-- - 1/22: Chapter 1 & 2 -->
+<!-- - 1/28:  Chapter 3 and 4 -->
+<!-- - 2/4: Chapter  5 -->
+<!-- - 2/11: Chapter 6 -->
+<!-- - 2/18: <span style="color:green">*Exam Review*</span> -->
+<!-- - 2/25: <span style="color:red">**Exam 1**</span> & Chapter 7 -->
+<!-- - 3/4: Chapter 8 -->
+<!-- - 3/11: Spring Break -->
+<!-- - 3/18: Chapter 9 -->
+<!-- - 3/25: Chapter 10 and 11 -->
+<!-- - 4/1:  <span style="color:green">*Exam Review*</span> -->
+<!-- - 4/8: <span style="color:red">**Exam 2**</span> & Chapter 12 -->
+<!-- - 4/15: Chapter 13 and 14 -->
+<!-- - 4/22: Chapter 15 -->
+<!-- - 4/29: exam review -->
+<!-- - 5/6: Finals Week  -->
+<p>Week Starting: Chapter Covered - 8/26: Chapter 1 &amp; 2 - 9/2: Chapter 3 and 4 - 9/9: Chapter 5 - 9/16: Chapter 6 - 9/23: <span style="color:green"><em>Exam Review</em></span> - 9/30: <span style="color:red"><strong>Exam 1</strong></span> &amp; Chapter 7 - 10/7: Chapter 8 - 10/14: Chapter 9 - 10/21: Chapter 10 and 11 - 10/28: <span style="color:green"><em>Exam Review</em></span> - 11/4: <span style="color:red"><strong>Exam 2</strong></span> &amp; Chapter 12 - 11/11: Chapter 13 and 14 - 11/18: Chapter 15 - 11/25: exam review - 12/2: exam review</p>
 <!---## A note on learning in the course and in finance generally:
 
 In this course I will teach you how to answer questions, and solve financial problems.  This is different than teaching you the answers to text questions, and the distinction here is important.  When you start to work you will be faced with unique financial situations and problems to solve.  You will have to figure out how to solve the problem.  To do so you will apply the concepts and skills you learn in this course to your particular situation.  You will never be faced with a textbook problem while working however.   
@@ -939,7 +918,7 @@ As a practical example, it makes much more sense for you to ask me "how do I sol
 
     </div>
     <div class="col-md-2">
-      <div id="toc">
+            <div id="toc">
       	<button type="button" class="close">×</button>
         <ul>
         <li><a href="#syllabus-fin-302-financial-management-principles">Syllabus (FIN 302) Financial Management Principles</a><ul>
@@ -953,7 +932,7 @@ As a practical example, it makes much more sense for you to ask me "how do I sol
         </ul></li>
         </ul>
       </div>
-    </div>
+          </div>
   </div>
 </div>
 
@@ -975,6 +954,7 @@ $(document).ready(function () {
   $('#content').magnificPopup({
 	      type:'image',
 	      closeOnContentClick: false,
+	      closeBtnInside: false,
 	      delegate: 'img',
 	      gallery: {enabled: false },
 	      image: {
