added example email

--- a/index.html
+++ b/index.html
@@ -890,45 +890,54 @@ Students may be exempted from the final exam if their scores on exams 1 and 2 ar
 </div>
 <div id="tentative-outline-by-week" class="section level2">
 <h2>Tentative Outline by Week</h2>
-<!-- - 1/22: Chapter 1 & 2 -->
-<!-- - 1/28:  Chapter 3 and 4 -->
-<!-- - 2/4: Chapter  5 -->
-<!-- - 2/11: Chapter 6 -->
-<!-- - 2/18: <span style="color:green">*Exam Review*</span> -->
-<!-- - 2/25: <span style="color:red">**Exam 1**</span> & Chapter 7 -->
-<!-- - 3/4: Chapter 8 -->
-<!-- - 3/11: Spring Break -->
-<!-- - 3/18: Chapter 9 -->
-<!-- - 3/25: Chapter 10 and 11 -->
-<!-- - 4/1:  <span style="color:green">*Exam Review*</span> -->
-<!-- - 4/8: <span style="color:red">**Exam 2**</span> & Chapter 12 -->
-<!-- - 4/15: Chapter 13 and 14 -->
-<!-- - 4/22: Chapter 15 -->
-<!-- - 4/29: exam review -->
-<!-- - 5/6: Finals Week  -->
 <ul>
-<li>8/26: Chapter 1 &amp; 2</li>
-<li>9/2: Chapter 3 and 4</li>
-<li>9/9: Chapter 5</li>
-<li>9/16: Chapter 6</li>
-<li>9/23: <span style="color:green"><em>Exam Review</em></span></li>
-<li>9/30: <span style="color:red"><strong>Exam 1</strong></span> &amp; Chapter 7</li>
-<li>10/7: Chapter 8</li>
-<li>10/14: Chapter 9</li>
-<li>10/21: Chapter 10 and 11</li>
-<li>10/28: <span style="color:green"><em>Exam Review</em></span></li>
-<li>11/4: <span style="color:red"><strong>Exam 2</strong></span> &amp; Chapter 12</li>
-<li>11/11: Chapter 13 and 14</li>
-<li>11/18: Chapter 15</li>
-<li>11/25: exam review</li>
-<li>12/2: exam review</li>
+<li>1/22: Chapter 1 &amp; 2</li>
+<li>1/28: Chapter 3 and 4</li>
+<li>2/4: Chapter 5</li>
+<li>2/11: Chapter 6</li>
+<li>2/18: <span style="color:green"><em>Exam Review</em></span></li>
+<li>2/25: <span style="color:red"><strong>Exam 1</strong></span> &amp; Chapter 7</li>
+<li>3/4: Chapter 8</li>
+<li>3/11: Spring Break</li>
+<li>3/18: Chapter 9</li>
+<li>3/25: Chapter 10 and 11</li>
+<li>4/1: <span style="color:green"><em>Exam Review</em></span></li>
+<li>4/8: <span style="color:red"><strong>Exam 2</strong></span> &amp; Chapter 12</li>
+<li>4/15: Chapter 13 and 14</li>
+<li>4/22: Chapter 15</li>
+<li>4/29: exam review</li>
 </ul>
+<!-- - 8/26: Chapter 1 & 2 -->
+<!-- - 9/2:  Chapter 3 and 4 -->
+<!-- - 9/9: Chapter  5 -->
+<!-- - 9/16: Chapter 6 -->
+<!-- - 9/23: <span style="color:green">*Exam Review*</span> -->
+<!-- - 9/30: <span style="color:red">**Exam 1**</span> & Chapter 7 -->
+<!-- - 10/7: Chapter 8 -->
+<!-- - 10/14: Chapter 9 -->
+<!-- - 10/21: Chapter 10 and 11 -->
+<!-- - 10/28:  <span style="color:green">*Exam Review*</span> -->
+<!-- - 11/4: <span style="color:red">**Exam 2**</span> & Chapter 12 -->
+<!-- - 11/11: Chapter 13 and 14 -->
+<!-- - 11/18: Chapter 15 -->
+<!-- - 11/25: exam review -->
+<!-- - 12/2: exam review -->
 </div>
 <div id="communication-by-email" class="section level2">
 <h2>Communication by Email</h2>
 <div id="when-it-is-appropriate" class="section level3">
 <h3>When It Is Appropriate</h3>
-<p>This is an in-class course, and you are responsible for knowing what has taken place in class. In the case of an unexcused absence, you should come by office hours or talk with classmates to learn what you missed.</p>
+<p>This is an in-class course, and you are responsible for knowing what has taken place in class. In the case of an unexcused absence, you should come by office hours or talk with classmates to learn what you missed. It is not appropriate to email me.</p>
+<p>In the case of an absence due to medical or family emergency, you can email me your documentation along with questions regarding what you missed. However you can also stop by office hours if convenient.</p>
+</div>
+<div id="how-to-write-an-email" class="section level3">
+<h3>How to Write an Email</h3>
+<p><code>Subject:</code> FIN 302: [Clear Subject Here]</p>
+<p><code>Body:</code></p>
+<p>Dear Professor (or Dr.) Brigida,</p>
+<p>[Text of email here.]</p>
+<p>Sincerely,</p>
+<p>[Your name.]</p>
 <!---## A note on learning in the course and in finance generally:
 
 In this course I will teach you how to answer questions, and solve financial problems.  This is different than teaching you the answers to text questions, and the distinction here is important.  When you start to work you will be faced with unique financial situations and problems to solve.  You will have to figure out how to solve the problem.  To do so you will apply the concepts and skills you learn in this course to your particular situation.  You will never be faced with a textbook problem while working however.   
