--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-01-04 Sat 14:54 -->
+<!-- 2020-01-05 Sun 16:49 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Syllabus (FIN 302) Financial Management Principles</title>
@@ -261,27 +261,32 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgd738113">1. Description</a>
+<li><a href="#org993a728">1. Description</a>
 <ul>
-<li><a href="#org9e9393f">1.1. Overview</a></li>
-<li><a href="#org46071cc">1.2. Course Learning Outcomes &amp; Objectives</a></li>
+<li><a href="#org4a52b6c">1.1. Overview</a></li>
+<li><a href="#orgcd440f9">1.2. Course Learning Outcomes &amp; Objectives</a></li>
 </ul>
 </li>
-<li><a href="#orge66d7a7">2. Exams</a></li>
-<li><a href="#orgc64e1fa">3. Project</a></li>
-<li><a href="#org1b40d19">4. Attendance/Quizzes/Participation</a></li>
-<li><a href="#org354297f">5. Grading</a></li>
-<li><a href="#org61e4576">6. Guidelines and Accommodations</a>
+<li><a href="#org8928310">2. Exams</a></li>
+<li><a href="#org873aba7">3. Project</a></li>
+<li><a href="#org0ebc319">4. Attendance/Quizzes/Participation</a></li>
+<li><a href="#org6ce02b2">5. Grading</a>
 <ul>
-<li><a href="#org9cc4ef6">6.1. Accommodations for Students with Disabilities</a></li>
-<li><a href="#org43e9cd7">6.2. Course Syllabus Disclosure Statement Spring 2019</a></li>
+<li><a href="#orgb968e3a">5.1. An Important Note on Grading</a></li>
 </ul>
 </li>
-<li><a href="#org23cec44">7. Tentative Outline by Week</a></li>
-<li><a href="#org95cf0a2">8. Communication by Email</a>
+<li><a href="#orga8bf32a">6. Guidelines and Accommodations</a>
 <ul>
-<li><a href="#orgb36dfb3">8.1. When It Is Appropriate</a></li>
-<li><a href="#orgd9b442a">8.2. How to Write an Email</a></li>
+<li><a href="#orge2b710a">6.1. Accommodations for Students with Disabilities</a></li>
+<li><a href="#org61c031d">6.2. Course Syllabus Disclosure Statement Spring 2020</a></li>
+</ul>
+</li>
+<li><a href="#orge8d13fd">7. Tentative Outline by Week</a></li>
+<li><a href="#org514aa3a">8. Communication by Email</a>
+<ul>
+<li><a href="#orgd786767">8.1. When It Is Appropriate</a></li>
+<li><a href="#orgb24c520">8.2. How to Write an Email</a></li>
+<li><a href="#org58c9e5c">8.3. How Not to Write and Email</a></li>
 </ul>
 </li>
 </ul>
@@ -331,16 +336,16 @@ SCHOOL OF BUSINESS ADMINISTRATION
 </p>
 
 
-<div id="outline-container-orgd738113" class="outline-2">
-<h2 id="orgd738113"><span class="section-number-2">1</span> Description</h2>
+<div id="outline-container-org993a728" class="outline-2">
+<h2 id="org993a728"><span class="section-number-2">1</span> Description</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <b><b>Course Catalog Description</b></b>: General principles of corporate/managerial finance are presented. Topics include the tax environment, an overview of financial planning and control, working capital management, long term financing, time value of money, capital budgeting, cost of capital, dividend policy, agency theory, and international financial issues. Responsibilities and functions performed by financial analysts, financial managers, and chief financial managers are discussed. (Pre-requisite: ACC 201 or equivalent.)
 </p>
 </div>
 
-<div id="outline-container-org9e9393f" class="outline-3">
-<h3 id="org9e9393f"><span class="section-number-3">1.1</span> Overview</h3>
+<div id="outline-container-org4a52b6c" class="outline-3">
+<h3 id="org4a52b6c"><span class="section-number-3">1.1</span> Overview</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li>This course will present the fundamentals of managerial finance as a vital part of the complete business ecosystem. Importance is placed on becoming familiar with the rudimentary tools and techniques that act as the basis for all further study and function of finance.</li>
@@ -354,8 +359,8 @@ SCHOOL OF BUSINESS ADMINISTRATION
 </div>
 </div>
 
-<div id="outline-container-org46071cc" class="outline-3">
-<h3 id="org46071cc"><span class="section-number-3">1.2</span> Course Learning Outcomes &amp; Objectives</h3>
+<div id="outline-container-orgcd440f9" class="outline-3">
+<h3 id="orgcd440f9"><span class="section-number-3">1.2</span> Course Learning Outcomes &amp; Objectives</h3>
 <div class="outline-text-3" id="text-1-2">
 <p>
 CLO 1. Technical Competence: Adept in applying technology to solve institutional problems and enable effective financial decision making.
@@ -376,8 +381,8 @@ CLO 4. Leadership and Communication: Be capable of expressing key financial conc
 </div>
 </div>
 
-<div id="outline-container-orge66d7a7" class="outline-2">
-<h2 id="orge66d7a7"><span class="section-number-2">2</span> Exams</h2>
+<div id="outline-container-org8928310" class="outline-2">
+<h2 id="org8928310"><span class="section-number-2">2</span> Exams</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 There will be three exams (two during the semester and a final).  The exams will be multiple choice.
@@ -386,13 +391,9 @@ There will be three exams (two during the semester and a final).  The exams will
 </div>
 
 
-<div id="outline-container-orgc64e1fa" class="outline-2">
-<h2 id="orgc64e1fa"><span class="section-number-2">3</span> Project</h2>
+<div id="outline-container-org873aba7" class="outline-2">
+<h2 id="org873aba7"><span class="section-number-2">3</span> Project</h2>
 <div class="outline-text-2" id="text-3">
-<p>
-&lt;!&#x2013; add project with banking research data set here &#x2013;&gt;
-</p>
-
 <p>
 In groups, students will either:
 </p>
@@ -415,8 +416,8 @@ In addition, students will gain experience handling data, and making reasonable 
 </div>
 </div>
 
-<div id="outline-container-org1b40d19" class="outline-2">
-<h2 id="org1b40d19"><span class="section-number-2">4</span> Attendance/Quizzes/Participation</h2>
+<div id="outline-container-org0ebc319" class="outline-2">
+<h2 id="org0ebc319"><span class="section-number-2">4</span> Attendance/Quizzes/Participation</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Throughout the semester I will take attendance, give unanounced quizzes, and otherwise evaluate your participation.  Failure to attend class and participate will reduce your participation score, unless your absence is due to a <b><b>verifiable</b></b> medical or family emergency.  In such a case you must provide documentation.
@@ -424,8 +425,8 @@ Throughout the semester I will take attendance, give unanounced quizzes, and oth
 </div>
 </div>
 
-<div id="outline-container-org354297f" class="outline-2">
-<h2 id="org354297f"><span class="section-number-2">5</span> Grading</h2>
+<div id="outline-container-org6ce02b2" class="outline-2">
+<h2 id="org6ce02b2"><span class="section-number-2">5</span> Grading</h2>
 <div class="outline-text-2" id="text-5">
 <div class="org-center">
 <p>
@@ -500,18 +501,30 @@ Throughout the semester I will take attendance, give unanounced quizzes, and oth
 </p>
 </blockquote>
 </div>
+
+<div id="outline-container-orgb968e3a" class="outline-3">
+<h3 id="orgb968e3a"><span class="section-number-3">5.1</span> An Important Note on Grading</h3>
+<div class="outline-text-3" id="text-5-1">
+<blockquote>
+<p>
+There is no special consideration if you need a certain grade in this course to graduate.  <b><b>If you require a certain grade in this class to graduate it is your responsibility to earn that grade.</b></b> Specifically if you receive a `D` in this course I will not allow you to do extra assignments after the course is complete in exchange for a higher grade. 
+</p>
+</blockquote>
+</div>
+</div>
 </div>
 
-<div id="outline-container-org61e4576" class="outline-2">
-<h2 id="org61e4576"><span class="section-number-2">6</span> Guidelines and Accommodations</h2>
+
+<div id="outline-container-orga8bf32a" class="outline-2">
+<h2 id="orga8bf32a"><span class="section-number-2">6</span> Guidelines and Accommodations</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 Academic Integrity Policy Students Enrolled in this course are required to understand and fully comply with all aspects of the Academic Integrity Policy as described in the SUNY Polytechnic Institute Handbook (available at:  <a href="https://sunypoly.edu/pdf/student_handbook.pdf">https://sunypoly.edu/pdf/student_handbook.pdf</a> )
 </p>
 </div>
 
-<div id="outline-container-org9cc4ef6" class="outline-3">
-<h3 id="org9cc4ef6"><span class="section-number-3">6.1</span> Accommodations for Students with Disabilities</h3>
+<div id="outline-container-orge2b710a" class="outline-3">
+<h3 id="orge2b710a"><span class="section-number-3">6.1</span> Accommodations for Students with Disabilities</h3>
 <div class="outline-text-3" id="text-6-1">
 <p>
 Students with disabilities are welcome at SUNY Polytechnic Institute.
@@ -539,52 +552,42 @@ The Disabilities Services Office is happy to advocate or coordinate with outside
 </div>
 </div>
 
-<div id="outline-container-org43e9cd7" class="outline-3">
-<h3 id="org43e9cd7"><span class="section-number-3">6.2</span> Course Syllabus Disclosure Statement Spring 2019</h3>
+<div id="outline-container-org61c031d" class="outline-3">
+<h3 id="org61c031d"><span class="section-number-3">6.2</span> Course Syllabus Disclosure Statement Spring 2020</h3>
 <div class="outline-text-3" id="text-6-2">
+<blockquote>
 <p>
-&gt;Accommodations for Students with Disabilities
+Accommodations for Students with Disabilities
 </p>
 
 <p>
-&gt;In compliance with the Americans with Disabilities Act of 1990 and Section 504 of the Rehabilitation Act, SUNY Polytechnic Institute is committed to ensuring comprehensive educational access and accommodations for all registered students seeking access to meet course requirements and fully participate in programs and activities.  Students with documented disabilities or medical conditions are encouraged to request these services by registering with the Office of Disability Services.  For information related to these services or to schedule an appointment, please contact the Office of Disability Services using the information provided below.
+In compliance with the Americans with Disabilities Act of 1990 and Section 504 of the Rehabilitation Act, SUNY Polytechnic Institute is committed to ensuring comprehensive educational access and accommodations for all registered students seeking access to meet course requirements and fully participate in programs and activities.  Students with documented disabilities or medical conditions are encouraged to request these services by registering with the Office of Disability Services.  For information related to these services or to schedule an appointment, please contact the Office of Disability Services using the information provided below.
 </p>
 
 <p>
-&gt;Evelyn Lester, Director
-&gt;Office of Disability Services
-&gt;lestere@sunypoly.edu
-&gt;(315) 792-7170
-&gt;
-&gt;Utica Campus
-&gt;Peter J. Cayan Library, L145
-&gt;
-&gt;Albany Campus
-&gt;Suite 309, Students Services Office
-&gt;NanoFab South
+Evelyn Lester, Director
+Office of Disability Services
+lestere@sunypoly.edu
+(315) 792-7170
 </p>
 
 <p>
-&lt;!&#x2013; * Instructor's Notes &#x2013;&gt;
+Utica Campus
+Peter J. Cayan Library, L145
 </p>
 
 <p>
-&lt;!&#x2013; -  <b><b>Understanding vs Computation</b></b>: This course will focus on understanding financial concepts over merely calculating a number. Any calculation you will see as an undergrad has already been implemented in 20+ different programming languages.  You will never get a job as a calculator.  The value of the financial analyst is in undertanding what a calculation does, what the output means, etc.  You must be able to use the appropriate calculation in a given situation, and able to understand its output to make financial decisions. &#x2013;&gt;
+Albany Campus
+Suite 309, Students Services Office
+NanoFab South
 </p>
-
-<p>
-&lt;!&#x2013; -  <b><b>Spreadsheet Skills</b></b>:  The above does not mean you do not need to know how to calculate financial values.  You need to be able to do so in a spreadsheet, and increasingly with some programming language (python, javascript, R, etc). The point here is that the correct calculation is the minimal amount of work you can do.  It is the easiest part.  The harder, and more important aspect, is understanding what you are doing.  &#x2013;&gt;
-</p>
-
-<p>
-&lt;!&#x2013; -  Accordingly many <b>computation</b> questions on the exams can be solved through logic&#x2014;knowing that 3 of 4 potential answers are not possible. &#x2013;&gt;
-</p>
+</blockquote>
 </div>
 </div>
 </div>
 
-<div id="outline-container-org23cec44" class="outline-2">
-<h2 id="org23cec44"><span class="section-number-2">7</span> Tentative Outline by Week</h2>
+<div id="outline-container-orge8d13fd" class="outline-2">
+<h2 id="orge8d13fd"><span class="section-number-2">7</span> Tentative Outline by Week</h2>
 <div class="outline-text-2" id="text-7">
 <ul class="org-ul">
 <li>1/22: Chapter 1 &amp; 2</li>
@@ -603,35 +606,16 @@ The Disabilities Services Office is happy to advocate or coordinate with outside
 <li>4/22: Chapter 15</li>
 <li>4/29: exam review</li>
 </ul>
-
-
-<p>
-&lt;!&#x2013; - 8/26: Chapter 1 &amp; 2 &#x2013;&gt;
-&lt;!&#x2013; - 9/2:  Chapter 3 and 4 &#x2013;&gt;
-&lt;!&#x2013; - 9/9: Chapter  5 &#x2013;&gt;
-&lt;!&#x2013; - 9/16: Chapter 6 &#x2013;&gt;
-&lt;!&#x2013; - 9/23: &lt;span style="color:green"&gt;*Exam Review*&lt;/span&gt; &#x2013;&gt;
-&lt;!&#x2013; - 9/30: &lt;span style="color:red"&gt;**Exam 1**&lt;/span&gt; &amp; Chapter 7 &#x2013;&gt;
-&lt;!&#x2013; - 10/7: Chapter 8 &#x2013;&gt;
-&lt;!&#x2013; - 10/14: Chapter 9 &#x2013;&gt;
-&lt;!&#x2013; - 10/21: Chapter 10 and 11 &#x2013;&gt;
-&lt;!&#x2013; - 10/28:  &lt;span style="color:green"&gt;*Exam Review*&lt;/span&gt; &#x2013;&gt;
-&lt;!&#x2013; - 11/4: &lt;span style="color:red"&gt;**Exam 2**&lt;/span&gt; &amp; Chapter 12 &#x2013;&gt;
-&lt;!&#x2013; - 11/11: Chapter 13 and 14 &#x2013;&gt;
-&lt;!&#x2013; - 11/18: Chapter 15 &#x2013;&gt;
-&lt;!&#x2013; - 11/25: exam review &#x2013;&gt;
-&lt;!&#x2013; - 12/2: exam review &#x2013;&gt;
-</p>
 </div>
 </div>
 
 
-<div id="outline-container-org95cf0a2" class="outline-2">
-<h2 id="org95cf0a2"><span class="section-number-2">8</span> Communication by Email</h2>
+<div id="outline-container-org514aa3a" class="outline-2">
+<h2 id="org514aa3a"><span class="section-number-2">8</span> Communication by Email</h2>
 <div class="outline-text-2" id="text-8">
 </div>
-<div id="outline-container-orgb36dfb3" class="outline-3">
-<h3 id="orgb36dfb3"><span class="section-number-3">8.1</span> When It Is Appropriate</h3>
+<div id="outline-container-orgd786767" class="outline-3">
+<h3 id="orgd786767"><span class="section-number-3">8.1</span> When It Is Appropriate</h3>
 <div class="outline-text-3" id="text-8-1">
 <p>
 This is an in-class course, and you are responsible for knowing what has taken place in class.  In the case of an unexcused absence, you should come by office hours or talk with classmates to learn what you missed. It is not appropriate to email me.
@@ -643,8 +627,8 @@ In the case of an absence due to medical or family emergency, you can email me y
 </div>
 </div>
 
-<div id="outline-container-orgd9b442a" class="outline-3">
-<h3 id="orgd9b442a"><span class="section-number-3">8.2</span> How to Write an Email</h3>
+<div id="outline-container-orgb24c520" class="outline-3">
+<h3 id="orgb24c520"><span class="section-number-3">8.2</span> How to Write an Email</h3>
 <div class="outline-text-3" id="text-8-2">
 <p>
 <code>Subject:</code> FIN 302: [Clear Subject Here]
@@ -671,10 +655,31 @@ Sincerely,
 </p>
 </div>
 </div>
+
+<div id="outline-container-org58c9e5c" class="outline-3">
+<h3 id="org58c9e5c"><span class="section-number-3">8.3</span> How Not to Write and Email</h3>
+<div class="outline-text-3" id="text-8-3">
+<p>
+<code>Subject:</code> Missed Class [I don't know what class you are in.]
+</p>
+
+<p>
+<code>Body:</code>
+</p>
+
+<p>
+Matthew, [Wrong, we are not on a first name basis.]
+</p>
+
+<p>
+Can you tell me what I missed?  [No, you are responsible.]
+</p>
+</div>
+</div>
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="date">Created: 2020-01-04 Sat 14:54</p>
+<p class="date">Created: 2020-01-05 Sun 16:49</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
